add og:map images

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,27 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- HTML Meta Tags -->
     <title>Teruhisa Fukumoto</title>
+    <meta name="description" content="Teruhisa Fukumoto's portfolio site with React.js & Firebase hosting.">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Teruhisa Fukumoto">
+    <meta itemprop="description" content="Teruhisa Fukumoto's portfolio site with React.js & Firebase hosting.">
+    <meta itemprop="image" content="https://teruhisafukumoto.com/favicon.ico">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://teruhisafukumoto.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Teruhisa Fukumoto">
+    <meta property="og:description" content="Teruhisa Fukumoto's portfolio site with React.js & Firebase hosting.">
+    <meta property="og:image" content="https://teruhisafukumoto.com/favicon.ico">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Teruhisa Fukumoto">
+    <meta name="twitter:description" content="Teruhisa Fukumoto's portfolio site with React.js & Firebase hosting.">
+    <meta name="twitter:image" content="https://teruhisafukumoto.com/favicon.ico">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
