--- a/public/index.html
+++ b/public/index.html
@@ -26,20 +26,20 @@
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="Teruhisa Fukumoto">
     <meta itemprop="description" content="Teruhisa Fukumoto's portfolio site with React.js & Firebase hosting.">
-    <meta itemprop="image" content="https://teruhisafukumoto.com/favicon.ico">
+    <meta itemprop="image" content="https://teruhisafukumoto.com/tflogo.png">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://teruhisafukumoto.com">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Teruhisa Fukumoto">
     <meta property="og:description" content="Teruhisa Fukumoto's portfolio site with React.js & Firebase hosting.">
-    <meta property="og:image" content="https://teruhisafukumoto.com/favicon.ico">
+    <meta property="og:image" content="https://teruhisafukumoto.com/tflogo.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Teruhisa Fukumoto">
     <meta name="twitter:description" content="Teruhisa Fukumoto's portfolio site with React.js & Firebase hosting.">
-    <meta name="twitter:image" content="https://teruhisafukumoto.com/favicon.ico">
+    <meta name="twitter:image" content="https://teruhisafukumoto.com/tflogo.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
