--- a/public/index.html
+++ b/public/index.html
@@ -20,26 +20,45 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- HTML Meta Tags -->
-    <title>Teruhisa Fukumoto</title>
-    <meta name="description" content="Teruhisa Fukumoto's portfolio site with React.js & Firebase hosting.">
+    <title>Teruhisa Fukumoto's portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Teruhisa Fukumoto's portfolio. Web developer, And write some blogs.">
+    <meta property="og:title" content="Teruhisa Fukumoto's portfolio">
+    <meta property="og:url" content="http://teruhisafukumoto.com/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="">
+    <meta property="og:site_name" content="Teruhisa Fukumoto's portfolio">
+    <meta property="og:description" content="Teruhisa Fukumoto's portfolio. Web developer, And write some blogs.">
 
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="Teruhisa Fukumoto">
-    <meta itemprop="description" content="Teruhisa Fukumoto's portfolio site with React.js & Firebase hosting.">
-    <meta itemprop="image" content="https://teruhisafukumoto.com/tflogo.png">
+    <meta itemprop="description" content="Teruhisa Fukumoto's portfolio. Web developer, And write some blogs.">
+    <meta itemprop="image" content="https://teruhisafukumoto.com/panel.png">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://teruhisafukumoto.com">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Teruhisa Fukumoto">
-    <meta property="og:description" content="Teruhisa Fukumoto's portfolio site with React.js & Firebase hosting.">
-    <meta property="og:image" content="https://teruhisafukumoto.com/tflogo.png">
+    <meta property="og:title" content="Teruhisa Fukumoto's portfolio">
+    <meta property="og:description" content="Teruhisa Fukumoto's portfolio. Web developer, And write some blogs.">
+    <meta property="og:image" content="https://teruhisafukumoto.com/panel.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Teruhisa Fukumoto">
-    <meta name="twitter:description" content="Teruhisa Fukumoto's portfolio site with React.js & Firebase hosting.">
-    <meta name="twitter:image" content="https://teruhisafukumoto.com/tflogo.png">
+    <meta name="twitter:title" content="Teruhisa Fukumoto's portfolio">
+    <meta name="twitter:description" content="Teruhisa Fukumoto's portfolio. Web developer, And write some blogs.">
+    <meta name="twitter:image" content="https://teruhisafukumoto.com/panel.png">
+    <meta name="twitter:site" content="@terry_i_" />
+    <meta name="twitter:player" content="@terry_i_" />
+    <!-- JSON+LD -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "url": "https://teruhisafukumoto.com",
+        "name": "Teruhisa Fukumoto"
+        "logo": "https://teruhisafukumoto.com/tflogo.png"
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
