fix semantic json+ld

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
         "@context": "https://schema.org",
         "@type": "Organization",
         "url": "https://teruhisafukumoto.com",
-        "name": "Teruhisa Fukumoto"
+        "name": "Teruhisa Fukumoto",
         "logo": "https://teruhisafukumoto.com/tflogo.png"
       }
     </script>
