update meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -20,32 +20,34 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- HTML Meta Tags -->
-    <title>Teruhisa Fukumoto's portfolio</title>
+    <title>Teruhisa Fukumoto｜Web Developer – Tokyo, Japan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Teruhisa Fukumoto's portfolio. Web developer, And write some blogs.">
-    <meta property="og:title" content="Teruhisa Fukumoto's portfolio">
+    <meta name="keywords" content="Ruby,Python,Docker,JavaScript,Zeals,MedPeer,メドピア,ジールス,Gotanda.rb,Gotanda.js,エンジニア,Web,技術広報,採用,東京">
+    <meta name="description" content="Ruby, Python, Dockerを用いたサーバサイド系のWebエンジニア。技術広報やエンジニア採用、プロダクトマネジメントも経験。現在は東京を中心に活動しています。">
+    <meta property="og:title" content="Teruhisa Fukumoto｜Web Developer – Tokyo, Japan">
     <meta property="og:url" content="http://teruhisafukumoto.com/">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="">
-    <meta property="og:site_name" content="Teruhisa Fukumoto's portfolio">
-    <meta property="og:description" content="Teruhisa Fukumoto's portfolio. Web developer, And write some blogs.">
+    <meta property="og:image" content="https://teruhisafukumoto.com/panel.png">
+    <meta property="og:site_name" content="Teruhisa Fukumoto｜Web Developer – Tokyo, Japan">
+    <meta property="og:description" content="Ruby, Python, Dockerを用いたサーバサイド系のWebエンジニア。技術広報やエンジニア採用、プロダクトマネジメントも経験。現在は東京を中心に活動しています。">
 
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="Teruhisa Fukumoto">
-    <meta itemprop="description" content="Teruhisa Fukumoto's portfolio. Web developer, And write some blogs.">
+    <meta itemprop="description" content="Ruby, Python, Dockerを用いたサーバサイド系のWebエンジニア。技術広報やエンジニア採用、プロダクトマネジメントも経験。現在は東京を中心に活動しています。">
     <meta itemprop="image" content="https://teruhisafukumoto.com/panel.png">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://teruhisafukumoto.com">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Teruhisa Fukumoto's portfolio">
-    <meta property="og:description" content="Teruhisa Fukumoto's portfolio. Web developer, And write some blogs.">
+    <meta property="og:title" content="Teruhisa Fukumoto｜Web Developer – Tokyo, Japan">
+    <meta property="og:description" content="Ruby, Python, Dockerを用いたサーバサイド系のWebエンジニア。技術広報やエンジニア採用、プロダクトマネジメントも経験。現在は東京を中心に活動しています。">
     <meta property="og:image" content="https://teruhisafukumoto.com/panel.png">
+    <meta property="fb:app_id" content="531020217091812">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Teruhisa Fukumoto's portfolio">
-    <meta name="twitter:description" content="Teruhisa Fukumoto's portfolio. Web developer, And write some blogs.">
+    <meta name="twitter:title" content="Teruhisa Fukumoto｜Web Developer – Tokyo, Japan">
+    <meta name="twitter:description" content="Ruby, Python, Dockerを用いたサーバサイド系のWebエンジニア。技術広報やエンジニア採用、プロダクトマネジメントも経験。現在は東京を中心に活動しています。">
     <meta name="twitter:image" content="https://teruhisafukumoto.com/panel.png">
     <meta name="twitter:site" content="@terry_i_" />
     <meta name="twitter:player" content="@terry_i_" />
